demos: modernize security advantage demos to latest language versions
Updated all security impossibility demos to current language standards:
- C#: modern .NET patterns
- Go: latest Go idioms
- Java: updated Java features, corrected T.A.R.L. expansion
- JavaScript: ES2024 patterns
- Python: Python 3.12 features
- Rust: latest Rust edition